--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@ header{
 }
 footer{
     text-align: left;
-    display: inline;
+    /* display: inline; */
 }
-figure{
+/* figure{
     text-align:center;
-}
-aside{
+} */
+/* aside{
     display: flex;
     flex-direction: row-reverse;
     justify-content:space-between;
-}
+} */
 aside a img{
     width: 340px;
     height: 180px;
@@ -23,8 +23,8 @@ aside a{
      margin: 5px;
     text-decoration: none;
     color: black;
-    text-align: center;
-    vertical-align: bottom;
+    /* text-align: center;
+    vertical-align: bottom; */
 }
 nav {
     background-color:gray;
@@ -34,7 +34,7 @@ nav {
         color: black;
         text-align: right;
     }
- .image_blog{
+ /* .image_blog{
      float: left;
      display: block;
 
@@ -42,8 +42,7 @@ nav {
  .image_blog2{
      float: right;
      display: block;
-
- }
+ } */
  body{
      background-color: lightgrey;
  }
@@ -57,15 +56,14 @@ nav {
 details{
     background-color: green;
 }
-p{
+/* p{
     text-align: justify;
-}
+} */
 
 /* img.main{ */
     /* float: left; */
-    /* margin: 5px; */
-}
-#obtic1{
+    /* margin: 5px; }*/
+/* #obtic1{
     float: left;
 }
 #obtic2{
@@ -73,4 +71,4 @@ p{
 }
 #obtic3{
     float: left;
-}
+} */
