--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@ header nav .menu{
     justify-content: flex-start;
     align-items: center;
     padding: 0;
+    flex-wrap: wrap;
 }
 header nav .menu li a{
 text-decoration: none;
@@ -81,7 +82,7 @@ header .slider{
         justify-content: flex-start;
         font-size: 24px;
         padding:10px 20px;
-        flex-wrap: wrap;
+        /* flex-wrap: wrap; */
         /* margin: 0; */
     }
 }
