--- a/css/index.css
+++ b/css/index.css
@@ -132,3 +132,10 @@ main aside img{
 width:300px;
 }
  }
+ footer{
+     display:flex;
+     justify-content: space-between;
+     margin-top: 50px;
+     /* flex-direction: row; */
+     /* align-items: space-between; */
+ }
