--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Chilanka&display=swap');
 :root {
     scroll-behavior: smooth;
+    font-family: 'Chilanka', cursive;
     }
 
 body{
@@ -53,15 +55,16 @@ header nav div h2{
     color: white;
     background-color: grey;
     border-radius: 8px;
-    font-style: italic;
     padding: 5px;
     margin:0;
+    font-size: 18px;
 }
 header nav div h1+h2{
     margin-left:100px;
 }
+/* create .slider */
 header .slider{
-    background-image: url(../images/mountain_change.jpeg);
+    /* background-image: url(../images/mountain_change.jpeg); */
     background-position: center;
     background-size: cover;
     height: 500px;
@@ -70,6 +73,34 @@ header .slider{
     justify-content: center;
     flex-direction: column;
 }
+.showing {
+    opacity: 1;
+    z-index: 2;
+}
+.slider-item {
+    /* position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%; */
+    opacity: 0;
+    z-index: 1;
+
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+header .slider .slider-item:nth-of-type(1){
+background-image: url(../images/mountain_change.jpeg)
+}
+header .slider .slider-item:nth-of-type(2){
+background-image: url(../images/img2.jpeg)
+}
+header .slider .slider-item:nth-of-type(2){
+background-image: url(../images/img3.jpeg)
+}
+/* end slider */
 @media (min-width: 500px) {
     header nav div{
         margin: 0;
