--- a/css/index.css
+++ b/css/index.css
@@ -63,26 +63,42 @@ header nav div h1+h2{
     margin-left:100px;
 }
 /* create .slider */
-header .slider{
+ /* .slider{ */
     /* background-image: url(../images/mountain_change.jpeg); */
-    background-position: center;
+    /* background-position: center;
     background-size: cover;
-    height: 500px;
-    display: flex;
+    height: 500px; */
+    /* display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: column; */
+/* } */
+/* old */
+.slide {
+    /* font-size: 40px;
+    padding: 40px;
+    box-sizing: border-box;
+    background: #333;
+    color: #fff; */
 }
-.showing {
-    opacity: 1;
-    z-index: 2;
+
+#slides {
+    background-position: center;
+    background-size: cover;
+    background-attachment:fixed;
+    position: relative;
+    height: 450px;
+    padding: 0px;
+    margin: 0px;
+    list-style-type: none;
 }
-.slider-item {
-    /* position: absolute;
-    left: 0px;
-    top: 0px;
+
+.slide {
+    position: absolute;
+    /* left: 0px;
+    top: 0px; */
     width: 100%;
-    height: 100%; */
+    height: 100%;
     opacity: 0;
     z-index: 1;
 
@@ -91,17 +107,22 @@ header .slider{
     -o-transition: opacity 1s;
     transition: opacity 1s;
 }
-header .slider .slider-item:nth-of-type(1){
-background-image: url(../images/mountain_change.jpeg)
+
+.showing {
+    opacity: 1;
+    z-index: 2;
 }
-header .slider .slider-item:nth-of-type(2){
-background-image: url(../images/img2.jpeg)
+.slide:nth-of-type(1){
+background-image: url(../images/mountain_change.jpeg);
 }
-header .slider .slider-item:nth-of-type(2){
-background-image: url(../images/img3.jpeg)
+ .slide:nth-of-type(2){
+background-image: url(../images/img2.jpeg);
+}
+.slide:nth-of-type(3){
+background-image: url(../images/img3.jpeg);
 }
 /* end slider */
-@media (min-width: 500px) {
+@media (min-width: 550px) {
     header nav div{
         margin: 0;
         display: flex;
@@ -165,8 +186,39 @@ width:300px;
  }
  footer{
      display:flex;
-     justify-content: space-between;
      margin-top: 50px;
-     /* flex-direction: row; */
-     /* align-items: space-between; */
+     flex-direction: column-reverse;
+ }
+dialog{
+    margin-left: 400px;
+    margin-top: -80px;
+    border: 2px solid #2D9E9E;
+     background-color:#486464;
+     border-radius: 5px;
+}
+form{
+    margin:0;
+     /* color:#2D9E9E; */
+}
+button{
+     border: 2px solid black;
+     background-color:#486464;
+     border-radius: 5px;
+      color:#2D9E9E;
+      font-size: 18px;
+}
+ #clock{
+     width: 140px;
+     height: 60px;
+     font-size: 30px;
+     margin-top: -100px;
+     margin-left:85%;
+     border: 2px solid #2D9E9E;
+     background-color:#486464;
+     color:#2D9E9E;
+     border-radius: 5px;
+ }
+ figure {
+     display: flex;
+     justify-content: center;
  }
