--- a/css/index.css
+++ b/css/index.css
@@ -7,10 +7,8 @@
 body{
     max-width: 980px;
     margin: auto;
-    /* background-color: #629c44; */
     background-image: url(../images/fontbody2.jpg);
 }
-
 header nav .menu{
     display: flex;
     list-style-type: none;
@@ -29,13 +27,6 @@ background-color: #424242;
 /* height: 50px; */
 /* font-size: 16px; */
 }
-/* header nav .menu li:hover{
-    background-color: black;
-    height: 50px;
-    width:200px;
-    text-align: center;
-    align-content: center;
-} */
 header nav .menu li a:hover{
     background-color: black;
     border:1px solid white;
@@ -62,18 +53,10 @@ header nav div h2{
 header nav div h1+h2{
     margin-left:100px;
 }
+.logo{
+    /* margin: 100px; */
+}
 /* create .slider */
- /* .slider{ */
-    /* background-image: url(../images/mountain_change.jpeg); */
-    /* background-position: center;
-    background-size: cover;
-    height: 500px; */
-    /* display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column; */
-/* } */
-/* old */
 .slide {
     /* font-size: 40px;
     padding: 40px;
@@ -121,7 +104,6 @@ background-image: url(../images/img2.jpeg);
 .slide:nth-of-type(3){
 background-image: url(../images/img3.jpeg);
 }
-/* end slider */
 @media (min-width: 550px) {
     header nav div{
         margin: 0;
@@ -157,6 +139,7 @@ aside a img{
 aside a{
     text-decoration: none;
     color: white;
+    /* width: 200px; */
 }
 main article p {
     color: white;
@@ -166,10 +149,10 @@ main article p {
 main article p strong{
     color: black;
 }
-main{
-    /* display: flex;
-    flex-direction: column; */
-}
+/* main{
+    display: flex;
+    flex-direction: column;
+} */
 @media (min-width: 700px) {
 main{
   display: flex;
@@ -179,6 +162,7 @@ main{
 main aside{
     flex-direction: column;
     margin-left: 50px;
+    
 }
 main aside img{
 width:300px;
@@ -207,15 +191,18 @@ button{
       color:#2D9E9E;
       font-size: 18px;
 }
+button:hover{
+    background-color: rgb(14, 48, 44);
+}
  #clock{
      width: 140px;
      height: 60px;
      font-size: 30px;
      margin-top: -100px;
      margin-left:85%;
-     border: 2px solid #2D9E9E;
+     border: 5px solid #1A9B8D;
      background-color:#486464;
-     color:#2D9E9E;
+     color:white;
      border-radius: 5px;
  }
  figure {
